# cockpit

./: .babelrc  .babelrc.json  .bowerrc  .cache_1xlbzoh  .cache_ed9lza  .dir-locals.el  .eslintignore  .eslintrc.json  .flake8  .flowconfig  .git-blame-ignore-revs  .gitignore  .gitleaks.toml  .gitmodules  .gitpublish  .mailmap  .mypy.ini  .stylelintrc.json  .tasks  .travis.yml  AGENTS.md  AUTHORS  AUTHORS.in  FUZZING.md  HACKING  HACKING.md  MANIFEST.in  Makefile  Makefile.am  NEWS  PREPARE  PROPOSAL-PR.md  README  README.md  SECURITY.md  VERIFY  VERIFY.new  Vagrantfile  antora-playbook.yml  autogen.sh  (+30 more)
assets/base1/: Makefile.am  angular-bootstrap.min.js  angular-patternfly.css  angular.js  bootstrap-datepicker.js  bootstrap-datepicker.min.js  bootstrap-select.js  cockpit.js  jquery.js  manifest.json  mustache.js  mustache.min.js  patternfly-additions.css  patternfly.css  patterns.js  po.js  require-config.js  require.js  term.js  test-base64.html  test-cache.html  test-chan.html  test-dbus-address.html  test-dbus.html  test-echo.html  test-format.html  test-framed.html  test-http.html  test-locale.html  test-spawn.html  test-time.html  test-user.html
assets/dashboard/: Makefile.am  README.md  list.js  manifest.json
assets/docker/: Makefile.am  client.js  details.js  docker.js  index.html  overview.js  search.js
assets/kubernetes/: Makefile.am  README.md  app.js  containers.js  d3.js  d3.min.js  dashboard.js  deploy.js  graphs.js  images.css  node.js  nulecule.js  revealable.css
assets/networkmanager/: Makefile.am  manifest.json
assets/playground/: Makefile.am  patterns.html  service.html  speed.html
assets/realmd/: Makefile.am  manifest.json
assets/shell/: Makefile.am  cockpit-plot.js  controls.js  index.html  machines.js  plot.js  shell.css  shell.html  shell.js
assets/storaged/: Makefile.am  details.js  dialog.js  overview.js  test-util.html
assets/subscriptions/: Makefile.am  manifest.json  subscriptions.js
assets/systemd/: Makefile.am  host.js  index.html  init.js  journal.css  journal_line.mustache  journalctl.js  server.js  services.html  terminal.html  terminal.js
assets/users/: Makefile.am  authorized-keys.js  local.js  ssh-list-public-keys.sh  users.css
branding/centos/: Makefile.am  branding.css
branding/default/: Makefile.am  branding.css
branding/fedora/: Makefile.am  branding.css
branding/rhel/: Makefile.am  branding.css
containers/: Makefile.am  README.md  kubernetes-cockpit.json  openshift-cockpit.template
containers/base/: Dockerfile  README.md
containers/bastion/: Dockerfile  README.md  brand  cockpit-auth-ssh-key  cockpit.conf  install.sh  run.sh
containers/flatpak/: Makefile.am  add-release  beiboot-extra-packages  build  cockpit-client  cockpit-client-ssh  cockpit-client.desktop  cockpit-client.metainfo.xml.in  cockpit-client.yml.in  cockpit-session  cockpit-ssh  cockpit.conf  flatpak-install.sh  flatpak.yml.in  install  lock-requirements.py  org.cockpit_project.CockpitClient.desktop  org.cockpit_project.CockpitClient.metainfo.xml  org.cockpit_project.cockpit_client.desktop  org.cockpit_project.cockpit_client.metainfo.xml  prepare  requirements.txt  test  (+2 more)
data/: .gitignore  Makefile-data.am  Makefile.am  cockpit  cockpit-testing.service.in  cockpit-testing.socket  cockpit-ws-notls.service.in  cockpit-ws-notls.socket  cockpit-ws-testing.service.in  cockpit-ws-testing.socket  cockpit-ws.service.in  cockpit-ws.socket  cockpit.pam.insecure  cockpit.service.in  cockpitd-testing.service.in  cockpitd.service.in  com.redhat.Cockpit.DBusTests.Test.conf  com.redhat.Cockpit.service.in  com.redhat.Cockpit.xml  config  org.libvirt.Connect.xml  org.libvirt.Domain.xml  org.libvirt.NWFilter.xml  org.libvirt.Network.xml  org.libvirt.NodeDevice.xml  org.libvirt.Secret.xml  org.libvirt.StoragePool.xml  org.libvirt.StorageVol.xml  sshd-reauthorize.pam  test-server.service.in  test-server.socket
docs/: Makefile.am  libvirt-dbus.pod
lib/: .gitignore  Makefile.am  UPDATING.md  angular-route.v1.3.14.min.js  attrchange.min.js  bootstrap-combobox.v1.1.6.min.js  bootstrap-datetimepicker.min.js  bootstrap-datetimepicker.v4.0.0.css  bootstrap-datetimepicker.v4.0.0.js  bootstrap-datetimepicker.v4.0.0.min.css  bootstrap-select.css  bootstrap-select.v1.6.3.js  bootstrap-with-select.v3.0.3.js  bootstrap-with-select.v3.0.3.min.js  cockpit-components-dialog.jsx  cockpit-components-listing.css  cockpit-components-listing.jsx  cockpit-components-select.jsx  cockpit-components-terminal.jsx  credentials.js  flot.js  journal.css  journal.js  jquery-flot-selection.v0.8.3.min.js  jquery-flot-time.v0.8.3.min.js  jquery-flot.v0.8.3.min.js  jquery-flot.v1.1.js  listing.css  machine-change-auth.html  machine-not-supported.html  machines.js  moment-timezone-with-data.js  moment-timezone-with-data.min.js  mustache.v0.8.1.js  mustache.v0.8.1.min.js  page.css  patternfly.css  patternfly.v0.css  patternfly.v1.1.3.css  patternfly.x1.css  (+12 more)
pkg/: Makefile.am  Makefile.qunit  build  domain  network  ruff.toml  storage  system  webpack.config.js
po/: .gitignore  LINGUAS  Makefile.am  POTFILES.in  POTFILES.in.in  POTFILES.skip  ar.po  ca.po  cs.po  da.po  de.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  he.po  hr.po  html2po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  language_map.txt  lo.po  manifest2po  my.po  nb_NO.po  nl.po  pa.po  pl.po  po.empty.js  po.js  po2json  pt.po  pt_BR.po  ro.po  (+8 more)
selinux/: HACKING.md  Makefile.am  cockpit.fc  cockpit.if  cockpit.te  cockpit_session_selinux.8  cockpit_session_selinux.8cockpit  cockpit_ws_selinux.8  cockpit_ws_selinux.8cockpit
src/: Makefile.am  build_backend.py  connect.c  connect.h  domain.c  domain.h  events.c  events.h  gdbus.c  gdbus.h  main.c  manager.c  manager.h  network.c  network.h  nodedev.c  nodedev.h  nwfilter.c  nwfilter.h  org.libvirt.service.in  secret.c  secret.h  storagepool.c  storagepool.h  storagevol.c  storagevol.h  systemd_ctypes  util.c  util.h
tests/: Makefile.am  libvirttest.py  test_connect.py  test_domain.py  test_network.py  test_nodedev.py  test_storage.py  test_util.c  travis-run  xmldata.py
(+5910 files in other folders)
